[workspace]
members = [
    "alsactl-sys",
    "alsactl",
    "alsahwdep-sys",
    "alsahwdep",
    "alsatimer-sys",
    "alsatimer",
    "alsaseq-sys",
    "alsaseq",
    "alsarawmidi-sys",
    "alsarawmidi",
]

default-members = [
    "alsactl",
    "alsahwdep",
    "alsatimer",
    "alsaseq",
    "alsarawmidi",
]

exclude = [
    "gir",
]

# For my convenience to generate README.md for each crates by my tool.
[workspace.metadata.library.alsactl]
repository = "https://github.com/alsa-project/alsa-gobject"
purpose = """
operate ALSA Control character device
"""
[workspace.metadata.library.alsahwdep]
repository = "https://github.com/alsa-project/alsa-gobject"
purpose = """
operate ALSA HwDep character device
"""
[workspace.metadata.library.alsarawmidi]
repository = "https://github.com/alsa-project/alsa-gobject"
purpose = """
operate ALSA Rawmidi character device
"""
