[workspace]
members = [
    "alsactl-sys",
    "alsactl",
    "alsahwdep-sys",
    "alsahwdep",
    "alsatimer-sys",
    "alsatimer",
    "alsaseq-sys",
    "alsaseq",
    "alsarawmidi-sys",
    "alsarawmidi",
]

default-members = [
    "alsactl",
    "alsahwdep",
    "alsatimer",
    "alsaseq",
    "alsarawmidi",
]

exclude = [
    "gir",
]

# For development purpose.
[patch.crates-io]
alsactl-sys = { path = "alsactl-sys" }
alsahwdep-sys = { path = "alsahwdep-sys" }
alsatimer-sys = { path = "alsatimer-sys" }
alsatimer = { path = "alsatimer" }
alsaseq-sys = { path = "alsaseq-sys" }
alsarawmidi-sys = { path = "alsarawmidi-sys" }

# For my convenience to generate README.md for each crates by my tool.
[workspace.metadata.library.alsactl]
repository = "https://github.com/alsa-project/alsa-gobject"
purpose = """
operate ALSA Control character device
"""
[workspace.metadata.library.alsahwdep]
repository = "https://github.com/alsa-project/alsa-gobject"
purpose = """
operate ALSA HwDep character device
"""
[workspace.metadata.library.alsarawmidi]
repository = "https://github.com/alsa-project/alsa-gobject"
purpose = """
operate ALSA Rawmidi character device
"""
[workspace.metadata.library.alsatimer]
repository = "https://github.com/alsa-project/alsa-gobject"
purpose = """
operate ALSA Timer character device
"""
[workspace.metadata.library.alsaseq]
repository = "https://github.com/alsa-project/alsa-gobject"
purpose = """
operate ALSA Sequencer character device
"""
