[package]
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
build = "build.rs"
description = "FFI binding for libalsactl library"
edition = "2018"
license = "MIT"
links = "alsactl"
name = "alsactl-sys"
repository = "https://github.com/alsa-project/alsa-gobject-rs"
version = "0.3.0"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.alsactl]
name = "alsactl"
version = "0.3"

[lib]
name = "alsactl_sys"

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
version = "0.15"

[dependencies.gobject]
package = "gobject-sys"
version = "0.15"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
