[package]
edition = "2018"
name = "alsactl"
version = "0.0.90"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]
description = "API binding for alsactl library"
documentation = "https://docs.rs/alsactl/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["music", "alsa", "linux", "glib"]
license = "MIT"
repository = "https://github.com/alsa-project/alsa-gobject-rs"

[lib]
name = "alsactl"

[dependencies]
libc = "0.2"
bitflags = "1.0"
glib = "0.15"
ffi = {package = "alsactl-sys", path = "../alsactl-sys", version = "0.0.90" }

[dev-dependencies]
gir-format-check = "^0.1"
