[package]
edition = "2021"
name = "alsactl"
version = "0.6.0"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]
description = "API binding for alsactl library"
documentation = "https://docs.rs/alsactl/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["music", "alsa", "linux", "glib"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alsa-project/alsa-gobject-rs"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[lib]
name = "alsactl"

[dependencies]
libc = "0.2"
bitflags = "1.0"
glib = "0.19"
ffi = {package = "alsactl-sys", version = "0.6.0" }

[dev-dependencies]
gir-format-check = "^0.1"
