[package]
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
build = "build.rs"
description = "FFI binding for libalsahwdep library"
edition = "2021"
license = "MIT"
links = "alsahwdep"
name = "alsahwdep-sys"
repository = "https://github.com/alsa-project/alsa-gobject-rs"
rust-version = "1.57"
version = "0.2.0"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.alsahwdep]
name = "alsahwdep"
version = "0.0"

[lib]
name = "alsahwdep_sys"

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
version = "0.15"

[dependencies.gobject]
package = "gobject-sys"
version = "0.15"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
