[package]
name = "alsahwdep-sys"
version = "0.3.0"
links = "alsahwdep"
build = "build.rs"
description = "FFI binding for libalsahwdep library"
license = "MIT"
repository = "https://github.com/alsa-project/alsa-gobject-rs"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.alsahwdep]
name = "alsahwdep"
version = "0.3"

[lib]
name = "alsahwdep_sys"

[dependencies]
libc = "0.2"
glib-sys = "0.10"
gobject-sys = "0.10"

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "1.3"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
dox = []
