[package]
edition = "2021"
name = "alsahwdep"
version = "0.4.0"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]
description = "API binding for alsahwdep library"
documentation = "https://docs.rs/alsahwdep/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["music", "alsa", "linux", "glib"]
license = "MIT"
repository = "https://github.com/alsa-project/alsa-gobject-rs"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "alsahwdep"

[dependencies]
libc = "0.2"
bitflags = "1.0"
glib = "0.15"
ffi = {package = "alsahwdep-sys", version = "0.4.0" }

[dev-dependencies]
gir-format-check = "^0.1"
once_cell = "1.12"

[features]
# To suppress linking to C library to generate documentation.
dox = ["glib/dox"]
