[package]
edition = "2021"
name = "alsahwdep"
version = "0.7.0"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]
description = "API binding for alsahwdep library"
documentation = "https://docs.rs/alsahwdep/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["music", "alsa", "linux", "glib"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alsa-project/alsa-gobject-rs"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[lib]
name = "alsahwdep"

[dependencies]
libc = "0.2"
bitflags = "2.6"
glib = "0.20"
ffi = {package = "alsahwdep-sys", version = "0.7.0" }

[dev-dependencies]
gir-format-check = "0.1"
