[package]
name = "alsarawmidi-sys"
version = "0.1.1"
links = "alsarawmidi"
build = "build.rs"
description = "FFI binding for libalsarawmidi library"
license = "MIT"
repository = "https://github.com/alsa-project/alsa-gobject-rs"

[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "alsarawmidi_sys"

[dependencies]
libc = "0.2"

glib-sys = "0.10"
gobject-sys = "0.10"

[build-dependencies]
pkg-config = "0.3.7"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
dox = []
