[package]
edition = "2018"
name = "alsarawmidi"
version = "0.3.0"
# For publishing.
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
description = "API binding for libalsarawmidi library"
license = "MIT"
repository = "https://github.com/alsa-project/alsa-gobject-rs"

[lib]
name = "alsarawmidi"

[dependencies]
libc = "0.2"
bitflags = "1.0"
glib = "0.15"

ffi = {package = "alsarawmidi-sys", path = "../alsarawmidi-sys", version = "0.3" }

[dev-dependencies]
gir-format-check = "^0.1"
