[package]
edition = "2021"
name = "alsarawmidi"
version = "0.4.0"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]
description = "API binding for alsarawmidi library"
documentation = "https://docs.rs/alsarawmidi/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["music", "alsa", "linux", "glib"]
license = "MIT"
repository = "https://github.com/alsa-project/alsa-gobject-rs"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[lib]
name = "alsarawmidi"

[dependencies]
libc = "0.2"
bitflags = "1.0"
glib = "0.18"

ffi = {package = "alsarawmidi-sys", version = "0.4.0" }

[dev-dependencies]
gir-format-check = "^0.1"
