[package]
build = "build.rs"
edition = "2018"
links = "alsaseq"
name = "alsaseq-sys"
version = "0.3.0"
# For publishing.
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
description = "FFI binding for libalsaseq library"
license = "MIT"
repository = "https://github.com/alsa-project/alsa-gobject-rs"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.alsaseq]
name = "alsaseq"
version = "0.3"

[lib]
name = "alsaseq_sys"

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
version = "0.15"

[dependencies.gobject]
package = "gobject-sys"
version = "0.15"

[dependencies.alsatimer-sys]
path = "../alsatimer-sys"
version = "0.3"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
