[package]
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
description = "API binding for libalsaseq library"
edition = "2018"
license = "MIT"
name = "alsaseq"
repository = "https://github.com/alsa-project/alsa-gobject-rs"
version = "0.3.0"

[lib]
name = "alsaseq"

[dependencies]
libc = "0.2"
bitflags = "1.0"
glib = "0.15"
alsatimer = { path = "../alsatimer", version = "0.3" }
ffi = {package = "alsaseq-sys", path = "../alsaseq-sys", version = "0.3" }

[dev-dependencies]
gir-format-check = "^0.1"
nix = "0.17"
