[package]
edition = "2018"
name = "alsaseq"
version = "0.0.90"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]
description = "API binding for alsaseq library"
documentation = "https://docs.rs/alsaseq/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["music", "alsa", "linux", "glib"]
license = "MIT"
repository = "https://github.com/alsa-project/alsa-gobject-rs"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "alsaseq"

[dependencies]
libc = "0.2"
bitflags = "1.0"
glib = "0.15"
alsatimer = { path = "../alsatimer", version = "0.0.90" }
ffi = {package = "alsaseq-sys", path = "../alsaseq-sys", version = "0.0.90" }

[dev-dependencies]
gir-format-check = "^0.1"
nix = "0.17"

[features]
# To suppress linking to C library to generate documentation.
dox = ["ffi/dox", "glib/dox", "alsatimer/dox"]
