[package]
edition = "2021"
name = "alsaseq"
version = "0.5.0"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]
description = "API binding for alsaseq library"
documentation = "https://docs.rs/alsaseq/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["music", "alsa", "linux", "glib"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alsa-project/alsa-gobject-rs"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[lib]
name = "alsaseq"

[dependencies]
libc = "0.2"
bitflags = "1.0"
glib = "0.19"
alsatimer = "0.5.0"
ffi = {package = "alsaseq-sys", version = "0.5.0" }

[dev-dependencies]
gir-format-check = "^0.1"
nix = { version = ">=0.24", features = ["signal"] }
