[package]
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
description = "API binding for libalsatimer library"
edition = "2018"
license = "MIT"
name = "alsatimer"
repository = "https://github.com/alsa-project/alsa-gobject-rs"
version = "0.3.0"

[lib]
name = "alsatimer"

[dependencies]
libc = "0.2"
bitflags = "1.0"
glib = "0.15"
ffi = {package= "alsatimer-sys", path = "../alsatimer-sys", version = "0.3" }

[dev-dependencies]
gir-format-check = "^0.1"
