[package]
edition = "2018"
name = "alsatimer"
version = "0.4.0"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]
description = "API binding for alsatimer library"
documentation = "https://docs.rs/alsatimer/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["music", "alsa", "linux", "glib"]
license = "MIT"
repository = "https://github.com/alsa-project/alsa-gobject-rs"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "alsatimer"

[dependencies]
libc = "0.2"
bitflags = "1.0"
glib = "0.15"
ffi = {package= "alsatimer-sys", version = "0.4.0" }

[dev-dependencies]
gir-format-check = "^0.1"

[features]
# To suppress linking to C library to generate documentation.
dox = ["ffi/dox", "glib/dox"]
