[package]
build = "build.rs"
edition = "2021"
links = "alsahwdep"
name = "alsahwdep-sys"
version = "0.4.0"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["external-ffi-bindings", "hardware-support", "os::linux-apis"]
description = "FFI binding for alsahwdep library"
documentation = "https://docs.rs/alsahwdep-sys/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["music", "alsa", "linux", "glib", "ffi"]
license = "MIT"
repository = "https://github.com/alsa-project/alsa-gobject-rs"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.alsahwdep]
name = "alsahwdep"
version = "0.3"

[lib]
name = "alsahwdep_sys"

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
version = "0.15"

[dependencies.gobject]
package = "gobject-sys"
version = "0.15"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
# To suppress linking to C library to generate documentation.
dox = []
