[package]
build = "build.rs"
edition = "2021"
links = "alsarawmidi"
name = "alsarawmidi-sys"
version = "0.4.0"
# For publishing.
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
categories = ["external-ffi-bindings", "hardware-support", "os::linux-apis"]
description = "FFI binding for alsarawmidi library"
documentation = "https://docs.rs/alsarawmidi-sys/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["music", "alsa", "linux", "glib", "ffi"]
license = "MIT"
repository = "https://github.com/alsa-project/alsa-gobject-rs"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.alsarawmidi]
name = "alsarawmidi"
version = "0.3"

[lib]
name = "alsarawmidi_sys"

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
version = "0.15"

[dependencies.gobject]
package = "gobject-sys"
version = "0.15"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
# To suppress linking to C library to generate documentation.
dox = []
