[package]
build = "build.rs"
edition = "2021"
links = "alsarawmidi"
name = "alsarawmidi-sys"
version = "0.6.0"
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
categories = ["external-ffi-bindings", "hardware-support", "os::linux-apis"]
description = "FFI binding for alsarawmidi library"
documentation = "https://docs.rs/alsarawmidi-sys/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["music", "alsa", "linux", "glib", "ffi"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alsa-project/alsa-gobject-rs"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[package.metadata.system-deps.alsarawmidi]
name = "alsarawmidi"
version = "0.3"

[lib]
name = "alsarawmidi_sys"

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dependencies]
libc = "0.2"
glib-sys = "0.19"
gobject-sys = "0.19"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
