[package]
build = "build.rs"
edition = "2021"
links = "alsatimer"
name = "alsatimer-sys"
version = "0.6.0"
authors = ["Takashi Sakamoto"]
categories = ["external-ffi-bindings", "hardware-support", "os::linux-apis"]
description = "FFI binding for alsatimer library"
documentation = "https://docs.rs/alsatimer-sys/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["music", "alsa", "linux", "glib", "ffi"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alsa-project/alsa-gobject-rs"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[package.metadata.system-deps.alsatimer]
name = "alsatimer"
version = "0.3"

[lib]
name = "alsatimer_sys"

[build-dependencies]
pkg-config = "0.3"
system-deps = "7.0"

[dependencies]
libc = "0.2"
glib-sys = "0.20"
gobject-sys = "0.20"

[dev-dependencies]
shell-words = "1.1"
tempfile = "3.12"

[features]
